@@ -268,10 +268,50 @@ export const processPayment = (
 
 	const elements = gatewayUPEComponents[ paymentMethodType ].elements;
 
+	const getErrorMessage = ( err ) => {
+		const genericErrorMessage = __(
+			'Payment failed. Please try again.',
+			'woocommerce-gateway-stripe'
+		);
+		if ( ! err ) {
+			return genericErrorMessage;
+		}
+
+		const stripeErrorCodes = [
+			'parameter_invalid_empty',
+			'parameter_missing',
+			'parameter_string_empty',
+			'parameter_string_blank',
+		];
+
+		const errorMessage = err?.message || genericErrorMessage;
+		if ( ! stripeErrorCodes.includes( err.code ) ) {
+			return errorMessage;
+		}
+
+		// err.param is expected to be in the format of <billing|shipping>_details[<field>],
+		// e.g. billing_details[name]
+		const section = err?.param?.match( /(billing|shipping)_/ );
+		const field = err?.param?.match( /\[([A-Za-z0-9]+)\]/ );
+		if ( ! section || ! field || ! section[ 1 ] || ! field[ 1 ] ) {
+			return errorMessage;
+		}
+
+		const toProperCase = ( str ) => {
+			return str ? str.charAt( 0 ).toUpperCase() + str.slice( 1 ) : str;
+		};
+		return sprintf(
+			/* translators: %s is an input field name */
+			__( '%s is a required field.', 'woocommerce-gateway-stripe' ),
+			( section && section[ 1 ]
+				? toProperCase( section[ 1 ] ) + ' '
+				: '' ) + toProperCase( field[ 1 ] )
+		);
+	};
+
 	( async () => {
 		try {
 			await validateElements( elements );
-			let stopFormSubmission = false;
 
 			const paymentMethodObject = await createStripePaymentMethod(
 				api,
@@ -279,10 +319,13 @@ export const processPayment = (
 				jQueryForm,
 				paymentMethodType
 			);
+
 			appendPaymentMethodIdToForm(
 				jQueryForm,
 				paymentMethodObject.paymentMethod.id
 			);
+
+			let stopFormSubmission = false;
 			await additionalActionsHandler(
 				paymentMethodObject.paymentMethod,
 				jQueryForm,
@@ -302,27 +345,7 @@ export const processPayment = (
 		} catch ( err ) {
 			hasCheckoutCompleted = false;
 			jQueryForm.removeClass( 'processing' ).unblock();
-
-			let errorMessage = err.message;
-			if ( err.code === 'parameter_invalid_empty' ) {
-				const param = err.param.match( /country|postalCode/ );
-				if ( param ) {
-					errorMessage = sprintf(
-						/* translators: %s is an input field name */
-						__(
-							'Missing required billing address field: %s.',
-							'woocommerce-gateway-stripe'
-						),
-						param[ 0 ]
-					);
-				} else {
-					errorMessage = __(
-						'Missing required billing address field.',
-						'woocommerce-gateway-stripe'
-					);
-				}
-			}
-			showErrorCheckout( errorMessage );
+			showErrorCheckout( getErrorMessage( err ) );
 		}
 	} )();
 
